<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_30sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/detailproduck_header"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <ImageView
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/ic_arrow" />
        </RelativeLayout>

        <ImageView
            android:id="@+id/ivProduct"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:scaleType="fitCenter" />

        <TextView
            android:id="@+id/tvProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="Sabun Giv"
            android:textColor="@color/black"
            android:layout_marginBottom="@dimen/_10sdp"
            android:textSize="@dimen/_22ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/cardbackground"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/detail_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/_16ssp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:background="@drawable/cardbackground"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/detail_price"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:text="Rp20.000"
                android:textColor="@color/belanja_yuk_red"
                android:textSize="@dimen/_18ssp"
                android:layout_marginEnd="@dimen/_10sdp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/detail_dimensi"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvDimension"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="Rp20.000"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:layout_marginEnd="@dimen/_10sdp"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_15sdp"
            android:padding="@dimen/_10sdp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/price_unit"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:fontFamily="@font/poppins_medium"
                android:text="pcs"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp"
                android:layout_marginEnd="@dimen/_10sdp"/>
        </RelativeLayout>



    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlPay"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="@dimen/_30sdp"
        android:layout_marginBottom="@dimen/_30sdp"
        android:background="@drawable/primary_button"
        android:visibility="gone">

        <TextView
            android:id="@+id/tvPay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="@dimen/_20sdp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/item_buy"
            android:textColor="@color/white"
            android:textSize="@dimen/_16ssp" />
    </RelativeLayout>

</RelativeLayout>