<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/belanja_yuk_red">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/dashboard_title"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp" />

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundedbackground">

        <TextView
            android:id="@+id/tvSignInTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/dashboard_titlesignin"
            android:textColor="@color/black"
            android:textSize="@dimen/_22ssp" />

        <RelativeLayout
            android:id="@+id/rlSignForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvSignInTitle"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp">

            <LinearLayout
                android:id="@+id/llUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivUsername"
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/ic_profile" />

                    <TextView
                        android:id="@+id/tvUsername"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivUsername"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/login_username"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edittext_backgroundlogin"
                    android:fontFamily="@font/poppins_regular"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textCursorDrawable="@drawable/black_cursor"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/llUsername"
                android:layout_marginTop="@dimen/_15sdp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ivPassword"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:background="@drawable/ic_lock" />

                    <TextView
                        android:id="@+id/tvPassword"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_toEndOf="@+id/ivPassword"
                        android:fontFamily="@font/poppins_medium"
                        android:includeFontPadding="false"
                        android:text="@string/login_password"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_15ssp" />
                </RelativeLayout>

                <EditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@drawable/edittext_backgroundlogin"
                    android:fontFamily="@font/poppins_regular"
                    android:inputType="textPassword"
                    android:paddingHorizontal="@dimen/_7sdp"
                    android:textCursorDrawable="@drawable/black_cursor"
                    android:textSize="@dimen/_13ssp" />
            </LinearLayout>
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/rlSignForm"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/login_signin"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>
</RelativeLayout>