<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/belanja_yuk_red">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_60sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/poppins_bold"
        android:text="Pesanan Kamu Berhasil!"
        android:textColor="@color/white"
        android:textSize="@dimen/_24ssp" />

    <RelativeLayout
        android:id="@+id/rlContent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tvTitle"
        android:layout_alignParentBottom="true"
        android:background="@drawable/roundedbackground">

        <TextView
            android:id="@+id/tvDetailTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/detail_pembelian"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_5sdp"
            android:layout_below="@+id/tvDetailTitle"
            android:background="@drawable/cardbackground"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvProductDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvDetailTitle"
            android:layout_marginTop="@dimen/_10sdp"
            android:foregroundGravity="center_horizontal"
            tools:itemCount="2"
            tools:listitem="@layout/item_result" />

        <RelativeLayout
            android:id="@+id/rlPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rvProductDetail"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_15sdp">

            <TextView
                android:id="@+id/tvPriceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="Harga Total"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <TextView
                android:id="@+id/tvPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="Rp10.000"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />
        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_35sdp"
            android:layout_below="@+id/rlPrice"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:background="@drawable/primary_button"
            android:fontFamily="@font/poppins_bold"
            android:includeFontPadding="false"
            android:text="@string/detail_back"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_14ssp" />

        <TextView
            android:id="@+id/tvSignOut"
            android:layout_width="wrap_content"
            android:layout_below="@+id/btnBack"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/keluar_akun"
            android:textColor="@color/black"
            android:textSize="@dimen/_14ssp" />
    </RelativeLayout>
</RelativeLayout>