<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/_200sdp"
    app:cardUseCompatPadding="true"
    android:layout_marginHorizontal="@dimen/_8sdp"
    android:layout_marginVertical="@dimen/_8sdp"
    android:id="@+id/card"
    android:background="@drawable/cardbackground">

    <ImageView
        android:id="@+id/ivProduct"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="@dimen/_135sdp"
        android:layout_centerVertical="true"
        android:layout_marginStart="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:scaleType="fitCenter" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_toEndOf="@+id/ivProduct"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvProductTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="Giv Biru"
            android:textColor="@color/black"
            android:textSize="@dimen/_24ssp" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:fontFamily="@font/poppins_semibold"
                android:includeFontPadding="false"
                android:text="@string/checkout_kuantitas"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:id="@+id/ivMinus"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toEndOf="@+id/tvQuantity"
                android:background="@drawable/ic_frame_3" />

            <TextView
                android:id="@+id/tvTotalQuantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toEndOf="@+id/ivMinus"
                android:fontFamily="@font/poppins_bold"
                android:includeFontPadding="false"
                android:text="1"
                android:textColor="@color/black"
                android:textSize="@dimen/_14ssp" />

            <ImageView
                android:id="@+id/ivPlus"
                android:layout_width="@dimen/_10sdp"
                android:layout_height="@dimen/_10sdp"
                android:layout_centerVertical="true"
                android:layout_toEndOf="@+id/tvTotalQuantity"
                android:background="@drawable/ic_plus" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProductTitle"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="@string/subtotal"
            android:textColor="@color/black"
            android:textSize="@dimen/_11ssp" />

        <TextView
            android:id="@+id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tvProductTitle"
            android:fontFamily="@font/poppins_medium"
            android:includeFontPadding="false"
            android:text="Rp11.000"
            android:textColor="@color/black"
            android:textSize="@dimen/_17sdp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnConfirm"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_20sdp"
            android:background="@drawable/primary_button"
            android:layout_marginTop="@dimen/_10sdp"
            android:fontFamily="@font/poppins_semibold"
            android:includeFontPadding="false"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/_11ssp" />
    </LinearLayout>

</RelativeLayout>